# Pytest-yorick

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/pytest_yorick/: exceptions.py  report.py  runner.py
src/pytest_yorick/httpmessage/: http_session.py  validate.py
src/pytest_yorick/pytest/: __init__.py  addoption.py  file.py  hooks.py  item.py
src/pytest_yorick/schema/: files.py  jsonschema.py  tests.mainfile.yaml  tests.subfile.yaml
src/pytest_yorick/utils/: dict_utils.py  json_func.py  regexp_utils.py  yaml_func.py
testcase/ts-01-demo/ch-01-demo/tc-01-demo/: tc-01-demo.http.yml  tc-01-demo.yml
testcase/ts-01-demo/ch-01-demo/tc-02-demo2/: tc-02-demo2.http.yml  tc-02-demo2.yml
