[project]
name = "pytest-yorick"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "WinstonLoser", email = "winstonloser1984@outlook.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pdm]
distribution = true

[project.entry-points.pytest11]
yorick = "pytest_yorick.pytest"

[tool.pytest.ini_options]
addopts = [
    "--alluredir", "allure-results",
    "--clean-alluredir",
    "--tb=short"
]
log_file_format = "%(asctime)s [%(levelname)s]: (%(name)s:%(lineno)d) %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_level = "DEBUG"

markers = [
    "slow"
]